--- a/app/src/main/res/layout/fragment_text_note.xml
+++ b/app/src/main/res/layout/fragment_text_note.xml
@@ -11,7 +11,7 @@
         <variable name="rankEmpty" type="boolean"/>
 
         <variable name="noteItem" type="sgtmelon.scriptum.model.item.NoteItem"/>
-        <variable name="keyEdit" type="boolean"/>
+        <variable name="editMode" type="boolean"/>
 
         <variable name="undoAccess" type="boolean"/>
         <variable name="redoAccess" type="boolean"/>
@@ -28,7 +28,7 @@
 
         <include
                 layout="@layout/include_toolbar_note"
-                app:keyEdit='@{keyEdit}'
+                app:editMode='@{editMode}'
                 app:noteItem='@{noteItem}'/>
 
         <FrameLayout
@@ -62,7 +62,7 @@
                                 android:hint="@string/hint_enter_text"
                                 android:importantForAutofill="noExcludeDescendants"
                                 android:text='@={noteItem.text}'
-                                android:visibility='@{keyEdit ? v.VISIBLE : v.INVISIBLE}'
+                                android:visibility='@{editMode ? v.VISIBLE : v.INVISIBLE}'
                                 tools:targetApi="o"
                                 tools:visibility="gone"/>
 
@@ -70,7 +70,7 @@
                                 android:id="@+id/text_note_content_text"
                                 style="@style/EditText.TextNote.Read"
                                 android:text='@{noteItem.text}'
-                                android:visibility='@{!keyEdit ? v.VISIBLE : v.INVISIBLE}'
+                                android:visibility='@{!editMode ? v.VISIBLE : v.INVISIBLE}'
                                 tools:text="@string/preview_note_text"/>
 
                     </FrameLayout>
@@ -82,7 +82,7 @@
         </FrameLayout>
 
         <include layout="@layout/include_text_note_panel"
-                 app:keyEdit='@{keyEdit}'
+                 app:editMode='@{editMode}'
                  app:menuCallback='@{menuCallback}'
                  app:noteItem='@{noteItem}'
                  app:rankEmpty='@{rankEmpty}'
