--- a/app/src/main/res/layout/include_toolbar_note.xml
+++ b/app/src/main/res/layout/include_toolbar_note.xml
@@ -9,7 +9,7 @@
         <import alias="v" type="android.view.View"/>
         <import alias="def" type="sgtmelon.scriptum.office.annot.def.ThemeDef"/>
 
-        <variable name="keyEdit" type="boolean"/>
+        <variable name="editMode" type="boolean"/>
         <variable name="noteItem" type="sgtmelon.scriptum.model.item.NoteItem"/>
 
     </data>
@@ -42,7 +42,7 @@
                         android:hint="@string/hint_enter_name"
                         android:importantForAutofill="noExcludeDescendants"
                         android:text='@={noteItem.name}'
-                        android:visibility='@{keyEdit ? v.VISIBLE : v.GONE}'
+                        android:visibility='@{editMode ? v.VISIBLE : v.GONE}'
                         tools:targetApi="o"
                         tools:text="@string/preview_note_name"/>
 
@@ -51,7 +51,7 @@
                         style="@style/Container.ToolbarNote.Scroll"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:visibility='@{!keyEdit ? v.VISIBLE : v.GONE}'
+                        android:visibility='@{!editMode ? v.VISIBLE : v.GONE}'
                         tools:visibility="invisible">
 
                     <TextView
