--- a/app/src/main/res/drawable/bg_splash_screen.xml
+++ b/app/src/main/res/drawable/bg_splash_screen.xml
@@ -4,8 +4,7 @@
     <item android:drawable="@color/background_launcher"/>
 
     <item>
-        <bitmap android:gravity="center"
-                android:src="@mipmap/img_logo_splash"/>
+        <bitmap android:gravity="center" android:src="@mipmap/img_logo_splash"/>
     </item>
 
 </layer-list>
