--- a/app/src/main/res/values/styles_app.xml
+++ b/app/src/main/res/values/styles_app.xml
@@ -28,6 +28,8 @@
 
         <item name="alertDialogStyle">@style/Alert.Light</item>
         <item name="alertDialogTheme">@style/Alert.Light</item>
+
+        <item name="bottomSheetDialogTheme">@style/BottomSheetTheme.Light</item>
     </style>
 
     <style name="App.Light.UI">
@@ -59,6 +61,8 @@
 
         <item name="alertDialogStyle">@style/Alert.Dark</item>
         <item name="alertDialogTheme">@style/Alert.Dark</item>
+
+        <item name="bottomSheetDialogTheme">@style/BottomSheetTheme.Dark</item>
     </style>
 
     <style name="App.Dark.UI">
@@ -67,7 +71,7 @@
 
     <style name="App.Splash" parent="App.Dark.UI">
         <item name="colorPrimaryDark">@color/background_launcher</item>
-        <item name="android:windowBackground">@drawable/bg_splash</item>
+        <item name="android:windowBackground">@drawable/bg_splash_screen</item>
 
         <item name="android:navigationBarColor" tools:targetApi="lollipop">
             ?attr/colorPrimaryDark
@@ -81,12 +85,26 @@
         <item name="android:windowBackground">?attr/colorPrimaryDark</item>
     </style>
 
+    <!-- -->
+
     <style name="Alert.Light" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="colorAccent">?attr/clAccent</item>
     </style>
 
     <style name="Alert.Dark" parent="Theme.AppCompat.Dialog.Alert">
         <item name="colorAccent">?attr/clAccent</item>
+    </style>
+
+    <style name="BottomSheetTheme.Light" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/BottomSheetStyle</item>
+    </style>
+
+    <style name="BottomSheetTheme.Dark" parent="Theme.Design.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/BottomSheetStyle</item>
+    </style>
+
+    <style name="BottomSheetStyle" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@drawable/bg_sheet_dialog</item>
     </style>
 
     <style name="PopupTheme.Light" parent="ThemeOverlay.AppCompat.Light">
@@ -102,6 +120,8 @@
         <item name="colorControlNormal">?attr/clContent</item>
         <item name="actionMenuTextColor">?attr/clContent</item>
     </style>
+
+    <!-- -->
 
     <style name="Toolbar">
         <item name="android:layout_width">match_parent</item>
