Добавил items для recyclerView внутри вёрстки
Tag: @Text

--- a/app/src/main/res/layout-v21/item_rank.xml
+++ b/app/src/main/res/layout-v21/item_rank.xml
@@ -36,7 +36,9 @@
                     app:srcDisableColor="?attr/clContent"
                     app:srcSelect="@drawable/ic_visible_exit"
                     app:srcSelectAnim="@drawable/anim_visible_enter"
-                    app:srcSelectColor="?attr/clAccent"/>
+                    app:srcSelectColor="?attr/clAccent"
+                    tools:srcCompat="@drawable/ic_visible_exit"
+                    tools:tint="@color/accent_dark"/>
 
             <LinearLayout
                     android:id="@+id/rank_content_container"
