Добавил showIn для include внутри вёрстки
Tag: @Test

--- a/app/src/main/res/layout/include_text_note_panel.xml
+++ b/app/src/main/res/layout/include_text_note_panel.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:showIn="@layout/fragment_text_note">
 
     <data>
 
@@ -9,7 +10,8 @@
         <import alias="v" type="android.view.View"/>
         <import alias="noteType" type="sgtmelon.scriptum.model.key.NoteType"/>
 
-        <variable name="menuCallback" type="sgtmelon.scriptum.screen.callback.note.text.TextNoteMenuCallback"/>
+        <variable name="menuCallback"
+                  type="sgtmelon.scriptum.screen.callback.note.text.TextNoteMenuCallback"/>
         <variable name="rankEmpty" type="boolean"/>
 
         <variable name="noteItem" type="sgtmelon.scriptum.model.item.NoteItem"/>
