--- a/app/src/main/res/layout-v21/include_toolbar.xml
+++ b/app/src/main/res/layout-v21/include_toolbar.xml
@@ -2,10 +2,12 @@
 <com.google.android.material.appbar.AppBarLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:elevation="@dimen/elevation_4dp"
-        android:stateListAnimator="@null">
+        android:stateListAnimator="@null"
+        tools:showIn="@layout/fragment_notes">
 
     <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar_container"
