--- a/app/src/main/res/layout/include_toolbar.xml
+++ b/app/src/main/res/layout/include_toolbar.xml
@@ -2,9 +2,11 @@
 <com.google.android.material.appbar.AppBarLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:elevation="@dimen/elevation_0dp">
+        app:elevation="@dimen/elevation_0dp"
+        tools:showIn="@layout/fragment_notes">
 
     <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar_container"
