--- a/app/src/main/res/drawable/bg_sheet_dialog.xml
+++ b/app/src/main/res/drawable/bg_sheet_dialog.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:tools="http://schemas.android.com/tools"
        android:shape="rectangle">
 
     <solid android:color="?attr/clPrimary"/>
-
-    <corners android:topLeftRadius="@dimen/radius_16dp" android:topRightRadius="@dimen/radius_16dp"/>
+    <corners android:radius="@dimen/radius_8dp"/>
+    <size tools:height="@dimen/icon_48dp" tools:width="@dimen/icon_128dp"/>
 
 </shape>
