--- a/app/src/main/res/layout/fragment_text_note.xml
+++ b/app/src/main/res/layout/fragment_text_note.xml
@@ -7,7 +7,8 @@
 
         <import alias="v" type="android.view.View"/>
 
-        <variable name="menuCallback" type="sgtmelon.scriptum.screen.callback.note.text.TextNoteMenuCallback"/>
+        <variable name="menuCallback"
+                  type="sgtmelon.scriptum.screen.callback.note.text.TextNoteMenuCallback"/>
         <variable name="rankEmpty" type="boolean"/>
 
         <variable name="noteItem" type="sgtmelon.scriptum.model.item.NoteItem"/>
@@ -64,12 +65,14 @@
                                 android:text='@={noteItem.text}'
                                 android:visibility='@{editMode ? v.VISIBLE : v.INVISIBLE}'
                                 tools:targetApi="o"
-                                tools:visibility="gone"/>
+                                tools:visibility="invisible"/>
+
+                        <!-- Установка текста делается с условием, чтобы ничего не мешало editText менять размер -->
 
                         <TextView
                                 android:id="@+id/text_note_content_text"
                                 style="@style/EditText.TextNote.Read"
-                                android:text='@{noteItem.text}'
+                                android:text='@{editMode ? "" : noteItem.text}'
                                 android:visibility='@{!editMode ? v.VISIBLE : v.INVISIBLE}'
                                 tools:text="@string/preview_note_text"/>
 
