--- a/app/src/main/res/layout/include_roll_note_panel.xml
+++ b/app/src/main/res/layout/include_roll_note_panel.xml
@@ -16,10 +16,8 @@
         <variable name="noteItem" type="sgtmelon.scriptum.model.item.NoteItem"/>
         <variable name="editMode" type="boolean"/>
 
-        <variable name="undoAccess" type="boolean"/>
-        <variable name="redoAccess" type="boolean"/>
-
-        <variable name="saveEnabled" type="boolean"/>
+        <variable name="inputAccess" type="sgtmelon.scriptum.control.input.InputControl.Access"/>
+        <variable name="isSaveEnabled" type="boolean"/>
 
     </data>
 
@@ -86,8 +84,8 @@
                         style="@style/Button.Small"
                         android:contentDescription="@null"
                         android:onClick='@{() -> menuCallback.onMenuUndo()}'
-                        app:boolExpression='@{undoAccess}'
-                        app:enabled='@{undoAccess}'
+                        app:boolExpression='@{inputAccess.isUndo}'
+                        app:enabled='@{inputAccess.isUndo}'
                         app:falseColor='@{R.attr.clDisable}'
                         app:srcCompat="@drawable/ic_undo"
                         app:trueColor='@{R.attr.clContent}'
@@ -98,8 +96,8 @@
                         style="@style/Button.Small"
                         android:contentDescription="@null"
                         android:onClick='@{() -> menuCallback.onMenuRedo()}'
-                        app:boolExpression='@{redoAccess}'
-                        app:enabled='@{redoAccess}'
+                        app:boolExpression='@{inputAccess.isRedo}'
+                        app:enabled='@{inputAccess.isRedo}'
                         app:falseColor='@{R.attr.clDisable}'
                         app:srcCompat="@drawable/ic_redo"
                         app:trueColor='@{R.attr.clContent}'
@@ -136,7 +134,7 @@
                         android:background="?attr/selectableItemBackgroundBorderless"
                         android:onClick='@{() -> menuCallback.onMenuSave(true)}'
                         android:text="@string/menu_note_save"
-                        app:enabled='@{saveEnabled}'/>
+                        app:enabled='@{isSaveEnabled}'/>
 
             </LinearLayout>
 
