--- a/app/src/main/res/drawable/bg_sheet_dialog_dark.xml
+++ b/app/src/main/res/drawable/bg_sheet_dialog_dark.xml
@@ -3,7 +3,7 @@
        xmlns:tools="http://schemas.android.com/tools"
        android:shape="rectangle">
 
-    <solid android:color="?attr/clPrimary"/>
+    <solid android:color="@color/primary_dark"/>
     <corners android:radius="@dimen/radius_8dp"/>
     <size tools:height="@dimen/icon_48dp" tools:width="@dimen/icon_128dp"/>
 
