--- a/app/src/main/res/layout/view_sheet_add.xml
+++ b/app/src/main/res/layout/view_sheet_add.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
@@ -7,10 +7,10 @@
         android:layout_gravity="bottom">
 
     <FrameLayout
+            style="?attr/styleSheetAdd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/layout_8dp"
-            android:background="@drawable/bg_sheet_dialog"
             android:paddingTop="@dimen/radius_8dp"
             android:paddingBottom="@dimen/radius_8dp">
 
@@ -24,4 +24,4 @@
 
     </FrameLayout>
 
-</FrameLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
