--- a/app/src/main/res/layout/view_sheet_add.xml
+++ b/app/src/main/res/layout/view_sheet_add.xml
@@ -10,9 +10,7 @@
             style="?attr/styleSheetAdd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/layout_8dp"
-            android:paddingTop="@dimen/radius_8dp"
-            android:paddingBottom="@dimen/radius_8dp">
+            android:layout_margin="@dimen/layout_8dp">
 
         <com.google.android.material.navigation.NavigationView
                 android:id="@+id/add_navigation"
