--- a/app/src/main/res/values-ru/strings_app.xml
+++ b/app/src/main/res/values-ru/strings_app.xml
@@ -6,7 +6,6 @@
     <string name="title_bin">Корзина</string>
     <string name="title_preference">Настройки</string>
 
-
     <!-- Name of menu items -->
     <string name="menu_page_notes_preference">Настройки</string>
     <string name="menu_page_bin_clear">Очистить корзину</string>
@@ -30,29 +29,34 @@
     <string name="menu_note_restore_open">Восстановить и открыть</string>
     <string name="menu_note_clear">Удалить навсегда</string>
 
-
     <!-- Toast text -->
     <string name="toast_note_save_done">Изменения сохранены</string>
     <string name="toast_note_save_error">Изменения не сохранены</string>
 
-
-    <!-- Name of channels -->
+    <!-- Notifications -->
     <string name="notification_channel">Заметки</string>
     <string name="notification_group">Заметки</string>
 
+    <string name="notification_button_unbind">Открепить</string>
 
     <!-- Dialog -->
 
     <!-- Dialog titles and text -->
     <string name="dialog_title_clear_bin">Очистить корзину</string>
-    <string name="dialog_text_clear_bin">Вы уверены, что хотите безвозвратно удалить все не скрытые заметки из корзины?</string>
+    <string name="dialog_text_clear_bin">
+        Вы уверены, что хотите безвозвратно удалить все не скрытые заметки из корзины?
+    </string>
 
     <string name="dialog_title_color">Цвет</string>
     <string name="dialog_title_rank">Категории</string>
 
     <string name="dialog_title_convert">Конвертировать</string>
-    <string name="dialog_roll_convert_to_text">Вы уверены что, хотите конвертировать заметку? Все отметки в списке будут утеряны.</string>
-    <string name="dialog_text_convert_to_roll">Вы уверены что, хотите конвертировать заметку? Все пустые строки будут удалены.</string>
+    <string name="dialog_roll_convert_to_text">
+        Вы уверены что, хотите конвертировать заметку? Все отметки в списке будут утеряны.
+    </string>
+    <string name="dialog_text_convert_to_roll">
+        Вы уверены что, хотите конвертировать заметку? Все пустые строки будут удалены.
+    </string>
 
     <string name="dialog_title_sort">Порядок сортировки</string>
     <string name="dialog_title_add_note">Создать заметку</string>
@@ -81,15 +85,15 @@
     <string name="dialog_add_roll">Список</string>
 
     <string-array name="dialog_menu_text">
-        <item />
+        <item/>
         <item>@string/dialog_menu_convert_to_roll</item>
         <item>@string/dialog_menu_copy</item>
         <item>@string/dialog_menu_delete</item>
     </string-array>
 
     <string-array name="dialog_menu_roll">
-        <item />
-        <item />
+        <item/>
+        <item/>
         <item>@string/dialog_menu_convert_to_text</item>
         <item>@string/dialog_menu_copy</item>
         <item>@string/dialog_menu_delete</item>
@@ -103,7 +107,6 @@
 
     <!-- Toast -->
     <string name="toast_text_copy">Текст скопирован в буфер обмена</string>
-
 
     <!-- About dialog -->
     <string name="about_app_developer">Разработчик:\nКузнецов Алексей</string>
