Добавил экран уведомления, исправил двойное открытие настроек и заметок
Tag: @New @Fix

--- a/app/src/main/res/menu/fragment_notes.xml
+++ b/app/src/main/res/menu/fragment_notes.xml
@@ -4,6 +4,11 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:ignore="AlwaysShowAction">
 
+    <item android:id="@+id/item_notification"
+          android:icon="@drawable/ic_notifications"
+          android:title="@string/menu_page_notes_preference"
+          app:showAsAction="always"/>
+
     <item android:id="@+id/item_preference"
           android:icon="@drawable/ic_preference"
           android:title="@string/menu_page_notes_preference"
